--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -70,9 +70,13 @@
 <main id="sale-main">
     <div class="section sale-product">
   <div class="diorama-title">NISSAN 350Z CUSTOM/PERSONNALISÉ AND FURIOUS</div>
-  <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot1.webp" onclick="openLightbox(this.src)">
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot1.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -87,9 +91,14 @@
     </div>
     <div class="section sale-product">
   <div class="diorama-title">NISSAN SILVIA (S15) FAST AND FURIOUS</div>
-  <div class="slider-wrap">
+
   <div class="slider">
-    <img src="/images/newsale/Hot2.webp" onclick="openLightbox(this.src)">
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot2.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -126,9 +135,13 @@
 </div>
     <div class="section sale-product">
   <div class="diorama-title">1970 ROAD RUNNER FAST AND FURIOUS</div>
-  <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot4.webp" onclick="openLightbox(this.src)">
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot4.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -143,9 +156,13 @@
     </div>
     <div class="section sale-product">
   <div class="diorama-title">NISSAN SILVIA (S13) FAST AND FURIOUS</div>
-  <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot5.webp" onclick="openLightbox(this.src)">
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot5.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -160,10 +177,20 @@
     </div>
 <div class="section sale-product">
   <div class="diorama-title">Porsche</div>
-  <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot0.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot0.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
   </div>
  <div class="sold-badge">SOLD</div>
   </div>
@@ -179,10 +206,20 @@
 </div>
 <div class="section sale-product">
   <div class="diorama-title">Nissan</div>
-  <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot0.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="/images/newsale/Hot0.webp"
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0"
+      onclick="openLightbox(this.src)">
   </div>
   <div class="sold-badge">SOLD</div>
   </div>
