Add FAQ section to Index.html

--- a/faq/Index.html
+++ b/faq/Index.html
@@ -1,1 +1,190 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3X5F6D7CST"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3X5F6D7CST');
+  
+</script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FAQ | Diecast.scape</title>
+
+<link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="site-header">
+  <div class="header-inner">
+    <img src="/logo.png" class="header-logo" alt="Diecast Scape Logo">
+
+    <div class="header-title">DIECAST.SCAPE</div>
+
+    <!-- Hamburger -->
+    <div class="hamburger" onclick="openMenu()">☰</div>
+  </div>
+</header>
+
+<div class="page">
+
+  <h1>Frequently Asked Questions</h1>
+  <p>Quick answers about orders, payments, and delivery.</p>
+
+  <div class="faq-item">
+    <button class="faq-question">Why do you take orders on WhatsApp?</button>
+    <div class="faq-answer">
+       <p>We take orders on WhatsApp to give personal support and avoid mistakes.
+Each diorama is handcrafted and stock is limited, so WhatsApp helps us:</p>
+<p>•Confirm availability.</p>
+<p>•Share real photos/videos if needed.</p>
+<p>•Answer your questions instantly.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">Why is COD not available?</button>
+    <div class="faq-answer">
+      <p>COD is not available because:</p>
+<p>•These are custom-made and limited stock products.</p>
+<p>•We prepare and pack orders carefully after confirmation.</p>
+<p>COD orders often get cancelled after shipping, which causes losses for small brands like ours.
+This system helps us keep prices fair and quality high.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">How does payment work?</button>
+    <div class="faq-answer">
+      <p>After you message us on WhatsApp,We confirm availability and you can pay booking amount or full amount once payment is done, your product is reserved. Order is packed and shipped securely.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">What is booking amount?</button>
+    <div class="faq-answer">
+      <p>Booking amount is a small amount to reserve your product.</p>
+<p>This helps you:</p>
+<p>•Hold the item</p>
+<p>•Add more products later</p>
+<p>•Save on shipping cost by combining orders</p>
+<p>>Booking amount is adjusted in final payment.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">Are the dioramas ready-made or custom-built?</button>
+    <div class="faq-answer">
+  <p>Most dioramas are:</p>
+  <p>Ready-made handcrafted pieces.</p>
+  <p>some items can be custom-built on request (background, size, layout). Custom orders may take extra time.</p>
+    </div>
+  </div>
+  
+  <div class="faq-item">
+    <button class="faq-question">Are cars included with the diorama?</button>
+    <div class="faq-answer">
+      <p>❌ No.</p>
+      <p>Diecast cars shown in images are for display purposes only.
+         The product includes only the diorama display unit.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">How long does delivery take?</button>
+    <div class="faq-answer">
+     <p>Delivery usually takes:</p>
+<p>•3–7 working days after dispatch,
+Depends on your location and courier service.
+You will receive tracking details once shipped.</p>
+    </div>
+  </div>
+<div class="faq-item">
+    <button class="faq-question">Do you deliver all over India?</button>
+    <div class="faq-answer">
+     <p>Yes. 🚚</p>
+<p>We provide Pan-India delivery with proper bubble wrap packaging to keep your product safe.</p>
+</div>
+</div>
+
+  <div class="faq-item">
+    <button class="faq-question">What if the product gets damaged in transit?</button>
+    <div class="faq-answer">
+     <p>We pack items securely, but in rare cases of damage:</p>
+<p>•Please share unboxing video/photos within 24 hours</p>
+<p>•We’ll assist you with the best possible solution</p>
+</div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">Can I cancel or return my order?</button>
+    <div class="faq-answer">
+     <p>Since products are handcrafted / limited, cancellation or return depends on:</p>
+      <p>•Order stage (before or after dispatch).</p>
+      <p>•Product type (custom or ready-made).</p>
+      <p>Please check our Return & Cancellation Policy page for details.</p>
+</div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">How often do Special Sales happen?</button>
+    <div class="faq-answer">
+     <p>Special Sales happen occasionally based on stock availability.</p>
+<p>Follow us on Instagram to get updates before stock sells out.🚀</p>
+</div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">How can I contact you?</button>
+    <div class="faq-answer">
+    <p>📩 WhatsApp: Instant support.</p>
+<p>📸 Instagram DM: For previews & updates</p>
+    </div>
+  </div>
+  
+</div>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-copy">
+    
+This is a small independent business. Policies and information are subject to change without prior notice.<br><br>
+    © 2026 Diecast.scape —  Custom handcrafted products & sales<br>
+All brand names belong to their respective owners.<br><br>
+Thank you for visiting. 
+  </div>
+</footer>
+    <!-- Overlay -->
+<div class="menu-overlay" onclick="closeMenu()"></div>
+
+<!-- Slide Menu -->
+<nav class="side-menu">
+  <div class="menu-header">
+    <span>Menu</span>
+    <span class="close-btn" onclick="closeMenu()">✕</span>
+  </div>
+
+  <!-- Theme Toggle (UI only) -->
+<div class="theme-toggle">
+  <span>Theme</span>
+  <div class="toggle-switch" onclick="toggleThemeButton()">
+    <div class="toggle-circle"></div>
+  </div>
+</div>
+ <a href="/index.html" class="menu-sale">HOME</a>
+  <a href="/special-sale/" class="menu-sale">Special Sale 🔥</a>
+  <a href="/about/">About Us</a>
+  <a href="/privacy/">Privacy Policy</a>
+  <a href="/shipping/">Shipping Policy</a>
+  <a href="/return/">Return & Cancellation</a>
+  <a href="/terms/">Terms of Service</a>
+</nav>
+<script src="/assets/ js/core.js" defer></script>
+</body>
+</html>
