Enhance FAQ page with breadcrumb and contact details
Added breadcrumb navigation and contact information.

--- a/faq/Index.html
+++ b/faq/Index.html
@@ -31,6 +31,12 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
+<!-- Breadcrumb -->
+<nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">FAQ</span>
+</nav>
 
 <div class="page">
 
@@ -149,6 +155,8 @@ You will receive tracking details once shipped.</p>
   </div>
   
 </div>
+  <p><strong>Sill have questions?</strong></p>
+<p><strong>Message us on WhatsApp — we’re happy to help 😊</strong></p>
 
 <!-- FOOTER -->
 <footer class="site-footer">
@@ -184,6 +192,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
