Add FAQ link to the navigation menu

--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,11 @@
   </div>
 </header>
 
-
+<nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">About us</span>
+</nav>
 <!-- PAGE CONTENT -->
 <div class="page">
 
@@ -87,6 +91,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/terms/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
