--- a/privacy/index.html
+++ b/privacy/index.html
@@ -30,7 +30,11 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
-
+<nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">Privacy Policy</span>
+</nav>
 <!-- PAGE CONTENT -->
 <div class="page">
 
@@ -82,6 +86,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/FAQ/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
