Update FAQ link to correct URL

--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
-  <a href="/terms/">FAQ</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
