--- a/privacy/index.html
+++ b/privacy/index.html
@@ -86,7 +86,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
-  <a href="/FAQ/">FAQ</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
