--- a/return/index.html
+++ b/return/index.html
@@ -30,6 +30,11 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
+  <nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">Return & Cancellation</span>
+  </nav>
 <!-- PAGE CONTENT -->
 <div class="page">
   <h1>Return & Cancellation Policy</h1>
@@ -85,6 +90,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
