--- a/shipping/index.html
+++ b/shipping/index.html
@@ -31,7 +31,11 @@
   </div>
 </header>
 
-
+<nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">Shipping Policy</span>
+</nav>
 <div class="page">
 <h1>Shipping Policy</h1>
 
@@ -86,6 +90,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
