--- a/terms/index.html
+++ b/terms/index.html
@@ -30,7 +30,11 @@
   </div>
 </header>
 
-
+<nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">Terms of Service</span>
+</nav>
 <!-- PAGE CONTENT -->
 <div class="page">
 <h1>Terms of Service</h1>
@@ -80,6 +84,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
 </body>
