--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -27,10 +27,11 @@
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
 </header>
-  <div class="page1">
-  <h1><a href="/index.html">《 Back </a></h1>
-  </div>
-  
+  <nav class="breadcrumb-wrap">
+  <a href="/" class="breadcrumb-link">Home</a>
+  <span class="breadcrumb-sep">›</span>
+  <span class="breadcrumb-current">Special sale</span>
+  </nav>
   <!-- PAGE INTRO -->
 <div class="page">
   <h1>Special sale</h1>
@@ -253,6 +254,7 @@ target="_blank">
       <p><a href="/shipping/">Shipping Policy</a></p>
       <p><a href="/return/">Return & Cancellation</a></p>
       <p><a href="/terms/">Terms of Service</a></p>
+      <p><a href="/faq/">FAQ</a></p>
     </div>
 
   <div class="footer-copy">
@@ -301,6 +303,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/faq/">FAQ</a>
 </nav>
   
 <script src="/assets/ js/config.js"></script>
