--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@ target="_blank">
       <p><a href="/shipping/">Shipping Policy</a></p>
       <p><a href="/return/">Return & Cancellation</a></p>
       <p><a href="/terms/">Terms of Service</a></p>
+      <p><a href="/faq/">FAQ</a></p>
     </div>
 
   <div class="footer-copy">
@@ -521,6 +522,7 @@ Thank you for visiting.
   <a href="/shipping/">Shipping Policy</a>
   <a href="/return/">Return & Cancellation</a>
   <a href="/terms/">Terms of Service</a>
+  <a href="/faq/">FAQ</a>
 </nav>
 
 <script src="/assets/ js/core.js"></script>
