--- a/faq/index.html
+++ b/faq/index.html
@@ -153,8 +153,14 @@ You will receive tracking details once shipped.</p>
 <p>📸 Instagram DM: For previews & updates</p>
     </div>
   </div>
-  <p><strong>Sill have questions?</strong></p>
+</div>
+  <div class="page1">
+  <p><strong>Still have questions?</strong></p>
 <p><strong>Message us on WhatsApp — we’re happy to help 😊</strong></p>
+    <div class="footer-social">
+    <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
+    <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
+    </div>
 </div>
   
 <!-- FOOTER -->
