--- a/faq/index.html
+++ b/faq/index.html
@@ -154,14 +154,18 @@ You will receive tracking details once shipped.</p>
     </div>
   </div>
 </div>
-  <div class="page1">
-  <p><strong>Still have questions?</strong></p>
-<p><strong>Message us on WhatsApp — we’re happy to help 😊</strong></p>
-    <div class="footer-social">
-    <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
-    <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
-    </div>
+  <div class="faq-contact">
+  <h3>Still have questions?</h3>
+
+  <p class="faq-help-text">
+    Message us on 
+    <a href="https://wa.me/918792744018" target="_blank" class="faq-whatsapp-btn">
+      WhatsApp
+    </a> 
+    — we’re happy to help 😊
+  </p>
 </div>
+
   
 <!-- FOOTER -->
 <footer class="site-footer">
