Update footer to use buttons for social links
Replaced footer social links with styled buttons for Instagram and WhatsApp.

--- a/index.html
+++ b/index.html
@@ -464,11 +464,14 @@ target="_blank">
 </a>
 
   <footer class="site-footer">
-  <div class="footer-social">
-    <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
-    <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
-  </div>
-
+  <div class="footer-buttons">
+  <a href="https://instagram.com/diecast.scape" target="_blank" class="footer-btn footer-instagram">
+    Instagram
+  </a>
+  <a href="https://wa.me/918792744018" target="_blank" class="footer-btn footer-whatsapp">
+    WhatsApp
+  </a>
+</div>
   <div class="footer-grid">
     <div>
       <h4>Know more</h4>
