--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -11,7 +11,7 @@
 
 <div class="header">
   <b>Diecast.scape Admin</b>
-  <button onclick="adminLogout()" id="logoutBtn">Logout</button>
+  <button-logout onclick="adminLogout()" id="logoutBtn">Logout</button-logout>
 <div id="logoutLoader" class="loader"></div>
 </div>
 
