--- a/admin/login.html
+++ b/admin/login.html
@@ -4,49 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Admin — Diecast.scape</title>
-
-<style>
-body{
-  background:#0f1113;
-  color:#e8f6f6;
-  font-family:system-ui;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  height:100vh;
-}
-
-.card{
-  background:#15181b;
-  padding:30px;
-  border-radius:14px;
-  width:320px;
-  text-align:center;
-  border:1px solid #5BC0BE33;
-}
-
-input{
-  width:100%;
-  margin:8px 0;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #2b3136;
-  background:#0f1113;
-  color:#fff;
-}
-
-button{
-  width:100%;
-  padding:10px;
-  border:none;
-  border-radius:8px;
-  background:#5BC0BE;
-  color:#fff;
-  font-weight:600;
-  margin-top:8px;
-  cursor:pointer;
-}
-</style>
+<link rel="stylesheet" href="/assets/css/admin-style.css">
 </head>
 
 <body>
@@ -54,8 +12,8 @@ button{
   <h2>Admin Login</h2>
 <input id="admin-email" type="email">
 <input id="admin-password" type="password">
-
-<button onclick="adminLogin()">Login</button>
+<button onclick="adminLogin()" id="loginBtn">Login</button>
+<div id="loginLoader" class="loader"></div>
 <p id="msg"></p>
   </div>
 <script type="module" src="/assets/ js/firebase-init.js"></script>
