--- a/admin/login.html
+++ b/admin/login.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class="center">
   <div class="card">
   <h2>Admin Login</h2>
 <input id="admin-email" type="email">
@@ -15,6 +16,7 @@
 <button onclick="adminLogin()" id="loginBtn">Login</button>
 <div id="loginLoader" class="loader"></div>
 <p id="msg"></p>
+  </div>
   </div>
 <script type="module" src="/assets/ js/firebase-init.js"></script>
 <script type="module" src="/assets/ js/admin-auth.js"></script>
