--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   placeholder="Search..."
   onkeyup="searchProducts()"
   class="search-bar">
-
+<div id="productsContainer"></div>
 
 <div class="section">
   <div class="diorama-title">Lamborghini Miniature Display</div>
@@ -529,6 +529,8 @@ Thank you for visiting.
 </nav>
 
 <script src="/assets/ js/core.js"></script>
+<script type="module" src="/assets/ js/firebase-init.js"></script>
+<script type="module" src="/assets/ js/products-firebase.js"></script>
 <script src="/assets/ js/products.js"></script>
 <script src="/assets/ js/config.js"></script>
   <script>
