--- a/admin/login.html
+++ b/admin/login.html
@@ -11,8 +11,8 @@
   <div class="center">
   <div class="card">
   <h2>Admin Login</h2>
-<input id="admin-email" type="email">
-<input id="admin-password" type="password">
+<input id="admin-email" type="email" placeholder="email">
+<input id="admin-password" type="password" placeholder="Password">
 <button onclick="adminLogin()" id="loginBtn">Login</button>
 <div id="loginLoader" class="loader"></div>
 <p id="msg"></p>
