--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -35,11 +35,7 @@
 
 <button onclick="addImageField()">+ Add Image</button>
 
-<input id="p-whatsapp" placeholder="WhatsApp message">
-
-<button onclick="saveProduct()" class="save-btn">Save Product</button>
-<button onclick="saveProduct()" class="save-btn" id="saveBtn">
-  Save Product</button>
+  <button onclick="saveProduct()" class="save-btn" id="saveBtn">Save Product</button>
 <div id="saveLoader" class="loader"></div>
 <p id="saveMsg"></p>
 </div>
