--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -6,8 +6,7 @@
 <title>Admin Dashboard — Diecast.scape</title>
 <link rel="stylesheet" href="/assets/css/admin-style.css">
 </head>
-
-<body>
+<body class="auth-loading">
 
 <div class="header">
   <b>Diecast.scape Admin</b>
