--- a/admin/login.html
+++ b/admin/login.html
@@ -11,7 +11,7 @@
   <div class="center">
   <div class="card">
   <h2>Admin Login</h2>
-<input id="admin-email" type="email" placeholder="email">
+<input id="admin-email" type="email" placeholder="Email">
 <input id="admin-password" type="password" placeholder="Password">
 <button onclick="adminLogin()" id="loginBtn">Login</button>
 <div id="loginLoader" class="loader"></div>
