--- a/admin/login.html
+++ b/admin/login.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/assets/css/admin-style.css">
 </head>
 
-<body class="auth-loading">
+<body>
   <div class="center">
   <div class="card">
   <h2>Admin Login</h2>
