--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   onkeyup="searchProducts()"
   class="search-bar">
     
-<div id="productsContainer"></div>
+  <div id="productsContainer">
+  <div id="productsLoader" class="products-loader"></div>
+</div>
 
 <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
