--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   class="search-bar">
     
   <div id="productsContainer">
-  <div id="productsLoader" class="products-loader"></div>
+    <div id="productsLoader" class="loader-grid">
+  <div></div><div></div><div></div>
+  <div></div><div></div><div></div>
+  <div></div><div></div><div></div>
+</div>
 </div>
 
 <a class="wa-float"
