--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -11,8 +11,8 @@
 <div class="header">
   <b>Diecast.scape Admin</b>
   <button-logout onclick="adminLogout()" id="logoutBtn">Logout</button-logout>
-<div id="logoutLoader" class="loader"></div>
 </div>
+<div id="logoutLoader" class="loader-bar"></div>
 
 <div class="container">
   <h2>Dashboard</h2>
