--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   class="search-bar">
     
   <div id="productsContainer">
+    <div id="productsLoader" class="border-top"></div>
     <div id="productsLoader" class="loader-grid">
   <div></div><div></div><div></div>
   <div></div><div></div><div></div>
