--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <section class="hero">
   <h1>Miniature Worlds for Diecast Cars</h1>
   <p>Diecast.scape creates handcrafted display setups designed to showcase diecast cars with a clean, premium look.
-Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.</div>
+Each piece is carefully built with attention to scale, detail, and finish—perfect for collectors, photography, and showcase displays.
  </p>
   <div class="middle">
     <a href="#products" class="cta">Explore </a>
