--- a/admin/login.html
+++ b/admin/login.html
@@ -13,7 +13,7 @@
   <h2>Admin Login</h2>
 <input id="admin-email" type="email" placeholder="Email">
 <input id="admin-password" type="password" placeholder="Password">
-<button onclick="adminLogin()" id="loginBtn">Login</button>
+<button-login onclick="adminLogin()" id="loginBtn">Login</button-login>
 <div id="loginLoader" class="loader"></div>
 <p id="msg"></p>
   </div>
