--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -66,7 +66,7 @@
 
   <button onclick="saveProduct()" class="primary-btn" id="saveBtn">Save Product</button>
 <div id="saveLoader" class="loader"></div>
-<p id="saveMsg"></p>
+<p class="center-msg" id="saveMsg"></p>
       </div>
     </div>
 
