--- a/admin/login.html
+++ b/admin/login.html
@@ -15,7 +15,7 @@
 <input id="admin-password" type="password" placeholder="Password">
 <button class="primary-btn" onclick="adminLogin()" id="loginBtn">Login</button>
 <div id="loginLoader" class="loader"></div>
-<p id="msg"></p>
+<p class="center-msg" id="msg"></p>
   </div>
   </div>
 <script type="module" src="/assets/ js/firebase-init.js"></script>
