--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -17,26 +17,16 @@
 <div class="container">
   <h2 class="dash-title">Dashboard</h2>
 
-  <div class="dash-grid">
     <!-- MAIN SALE -->
     <div class="dash-card">
-      <div class="dash-head">
-        <div>Main Sale</div>
-      </div>
-      <button onclick="openSection('main')">
-          View
-        </button>
-    </div>
-    <!-- SPECIAL SALE -->
-    <div class="dash-card">
-      <div class="dash-head">
-        <div>Special Sale</div>
-      </div>
-      <button onclick="openSection('special')">
-          View
-        </button>
-    </div>
+  <div class="dash-title">Main Sale</div>
+  <button onclick="openSection('main')">View</button>
   </div>
+    <!-- SPECIAL SALE -->
+  <div class="dash-card">
+  <div class="dash-title">Special Sale</div>
+  <button onclick="openSection('special')">View</button>
+</div>
 
   <!-- ===== MAIN SALE SECTION ===== -->
   <div id="section-main" class="section-panel">
