--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -93,8 +93,9 @@ Save Product
 </div>
 </div>
 
-<script type="module" src="/assets/ js/firebase-init.js"></script>
 <script type="module" src="/assets/ js/admin-auth.js"></script>
+<script type="module" src="/assets/ js/firebase-init.js"></script>
+<script type="module" src="/assets/ js/dashboard.js"></script>
 
 </body>
 </html>
