--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -30,7 +30,7 @@
   <nav class="breadcrumb-wrap">
   <a href="/" class="breadcrumb-link">Home</a>
   <span class="breadcrumb-sep">›</span>
-  <span class="breadcrumb-current">Special sale</span>
+  <span class="breadcrumb-current">Special Sale</span>
   </nav>
   <!-- PAGE INTRO -->
 <div class="page">
@@ -67,174 +67,11 @@
   placeholder="Search..."
   onkeyup="searchProducts()"
   class="search-bar">
-  <main id="sale-main"></main>
-<main id="sale-main-in">
-    <div class="section sale-product">
-  <div class="diorama-title">NISSAN 350Z CUSTOM/PERSONNALISÉ AND FURIOUS</div>
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot1.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
-  </div>
-  <div class="price">
-    <span class="new">₹299</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET01.%0AIs%20it%20available%3F"
-     target="_blank">
-     Book Now
-  </a>
-    </div>
-    <div class="section sale-product">
-  <div class="diorama-title">NISSAN SILVIA (S15) FAST AND FURIOUS</div>
+  
+  <main id="sale-main">
+    
+  </main>
 
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot2.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
-  </div>
-  <div class="price">
-    <span class="new">₹299</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET02.%0AIs%20it%20available%3F"
-     target="_blank">
-     Book Now
-  </a>
-    </div>
-<div class="section sale-product">
-  <div class="diorama-title">1970 MONTE CARLO FAST AND FURIOUS</div>
-
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot3.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
-  </div>
-  <div class="price">
-    <span class="new">₹299</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET03.%0AIs%20it%20available%3F"
-     target="_blank">
-     Book Now
-  </a>
-</div>
-    <div class="section sale-product">
-  <div class="diorama-title">1970 ROAD RUNNER FAST AND FURIOUS</div>
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot4.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
-  </div>
-  <div class="price">
-    <span class="new">₹299</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET04.%0AIs%20it%20available%3F"
-     target="_blank">
-     Book Now
-  </a>
-    </div>
-    <div class="section sale-product">
-  <div class="diorama-title">NISSAN SILVIA (S13) FAST AND FURIOUS</div>
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot5.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
-  </div>
-  <div class="price">
-    <span class="new">₹299</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET05.%0AIs%20it%20available%3F"
-     target="_blank">
-     Book Now
-  </a>
-    </div>
-<div class="section sale-product">
-  <div class="diorama-title">Porsche</div>
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot0.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-    </div>
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot0.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
- <div class="sold-badge">SOLD</div>
-  </div>
-  <div class="price">
-    <span class="new">₹179</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET06.%0AIs%20it%20available%3F"
-     target="_blank">
-     Book Now
-  </a>
-</div>
-<div class="section sale-product">
-  <div class="diorama-title">Nissan</div>
-  <div class="slider">
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot0.webp" 
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-    </div>
-    <div class="img-box">
-    <div class="img-loader"></div>
-    <img src="/images/newsale/Hot0.webp"
-      onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0"
-      onclick="openLightbox(this.src)">
-  </div>
-  <div class="sold-badge">SOLD</div>
-  </div>
-  <div class="price">
-    <span class="new">₹179</span>
-  </div>
-  <div class="ship">+ Shipping charges applicable</div>
-  <a class="buy-btn"
-     href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET07.%0AIs%20it%20available%3F"
-    target="_blank">
-     Book Now
-  </a>
-</div>
-</main>
   <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
 target="_blank">
