--- a/about/index.html
+++ b/about/index.html
@@ -36,6 +36,9 @@
   <span class="breadcrumb-sep">›</span>
   <span class="breadcrumb-current">About us</span>
 </nav>
+
+  <main id="sale-main">
+    </main>
 <!-- PAGE CONTENT -->
 <div class="page">
 
@@ -93,5 +96,8 @@ Thank you for visiting.
   <a href="/faq/">FAQ</a>
 </nav>
 <script src="/assets/ js/core.js" defer></script>
+  <script type="module" src="/assets/ js/firebase-init.js"></script>
+<script type="module" src="/assets/ js/sale-products-firebase.js"></script>  
+
 </body>
 </html>
