--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -68,9 +68,7 @@
   onkeyup="searchProducts()"
   class="search-bar">
   
-  <main id="sale-main">
-    
-  </main>
+  <div id="sale-main"></div>
 
   <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
