--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -67,15 +67,9 @@
   placeholder="Search..."
   onkeyup="searchProducts()"
   class="search-bar">
-  <div id="productsContainer">
-    <div id="productsLoader">
-  <div class="border-top"></div>
-  <div class="loader-grid">
-    <div></div><div></div><div></div>
-    <div></div><div></div><div></div>
-    <div></div><div></div><div></div>
-  </div>
-</div>
+  <div style="padding:20px;background:#111;color:#fff">
+  <button onclick="testSaleJS()">TEST SALE JS LOAD</button>
+  <div id="test-output" style="margin-top:10px"></div>
 </div>
 
   <div id="sale-main"></div>
@@ -159,7 +153,7 @@ Thank you for visiting.
 <script src="/assets/ js/config.js"></script>
 <script src="/assets/ js/core.js"></script>
 <script type="module" src="/assets/ js/firebase-init.js"></script>
-<script type="module" src="/assets/ js/products-firebase.js"></script>  
+<script type="module" src="/assets/ js/sale-products-firebase.js"></script>  
 <script src="/assets/ js/products.js"></script>
 <script>
   const saleEnabled = SALE_CONFIG.enabled;
